[package]
name = "aithericon-secrets"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Aithericon Research"]
description = "Pluggable secret resolution with a {{secret:KEY}} reference pattern and Vault response wrapping for secure secret delivery over untrusted channels"
readme = "README.md"
repository = "https://github.com/aithericon/aithericon-secrets"
homepage = "https://github.com/aithericon/aithericon-secrets"
keywords = ["secrets", "vault", "config", "security"]
categories = ["config", "cryptography"]

[features]
default = []
vault = ["dep:reqwest", "dep:serde"]

[dependencies]
async-trait = "0.1"
regex = "1"
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
testcontainers = "0.26"
