[package]
name = "aithericon-executor-backend-configs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lightweight config type definitions for executor backends (no heavy deps)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
aithericon-executor-domain.workspace = true
aithericon-executor-storage-types.workspace = true
