[package]
name = "aithericon-executor-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
docker = ["bollard", "futures"]
python = []
http = ["dep:reqwest"]

[dependencies]
aithericon-executor-domain = { workspace = true }
aithericon-executor-backend-configs = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bollard = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
