[package]
name = "aithericon-executor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "aithericon"
path = "src/main.rs"

[dependencies]
aithericon-executor-ipc = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
aithericon-executor-worker = { workspace = true }
aithericon-executor-domain = { workspace = true }
aithericon-executor-ipc = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
