[package]
name = "aithericon-executor-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[[example]]
name = "ipc_test_client"
