[package]
name = "aithericon-executor-logs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
nats = ["dep:async-nats"]
loki = ["dep:reqwest"]

[dependencies]
aithericon-executor-domain = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Optional — NATS log sink
async-nats = { workspace = true, optional = true }

# Optional — Loki log sink
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
